@@ -1,3 +1,6 @@
+Upcoming:
+- Fixed a potential crash with the storage module item when hovering over it
+
 2.0.3-beta:
 - Fixed a problem on servers
 
